----------------------------------------------------------------------
Feb 6, 2015 - Clojure 1.3 - 1.6, sheet v22

Removed = and not= from Numbers/Compare section.  It already had ==,
which is more appropriate for comparing numeric values than =, because
of the cross-type comparisons where = always returns false, and not=
always returns true, e.g. float/double vs. any integral type,
float/double vs. BigDecimal, any integral type vs. BigDecimal.

Removed == from Misc/Compare section since it was already in
Numbers/Compare section, and is redundant and perhaps confusing in
Misc section.

Added examples of literals for strings, characters, symbols, keywords.
Also added new Other/Misc section with literals true, false, and nil.
All have links to the clojure.org "Reader" documentation page,
straight to the anchor for "Reader forms" giving documentation for
syntax.

----------------------------------------------------------------------
Feb 3, 2015 - Clojure 1.3 - 1.6, sheet v21

Added (my-map k) -> (get my-map k) shorthand to Maps/Examine.

Move mapv and filterv from Vectors/Ops to Vectors/Create.  Also add
them to Using a Seq/Construct coll.  They return a vector, but they
can take any collection as an argument, so Vector/Ops wasn't really
appropriate.

Add reduce-kv to Maps/Ops.  Previously it was only mentioned under
Vectors, but its primary use is likely for maps.

Add Sets/Sorted sets section with same functions as in Maps/Sorted
maps, since those functions work on sorted sets, too.


----------------------------------------------------------------------
Dec 19, 2014 - Clojure 1.3 - 1.6, sheet v20

Grimoire 0.4.0 fixes and updates, thanks to Reid McKenzie and Alex
Robbins.

Add set! to Special Forms section.  It was only in the Java interop
section before, but of course it is also useful for setting
thread-local bindings of Vars.

----------------------------------------------------------------------
Nov 26, 2014 - Clojure 1.3 - 1.6, sheet v19
