@@ -1,4 +1,14 @@
 ----------------------------------------------------------------------
+Feb 24, 2015 - Clojure 1.3 - 1.6, sheet v23
+
+Added data.avl constructors for sorted sets and sorted maps:
+
+    clojure.data.avl/sorted-set
+    clojure.data.avl/sorted-set-by
+    clojure.data.avl/sorted-map
+    clojure.data.avl/sorted-map-by
+
+----------------------------------------------------------------------
 Feb 6, 2015 - Clojure 1.3 - 1.6, sheet v22
 
 Removed = and not= from Numbers/Compare section.  It already had ==,
